--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ dynamic = ["version", "description"]
 dependencies = ["pyjacklib", "log_soso"]
 
 [project.optional-dependencies]
-qt = ["PyQt5", "soso_qt_extras"]
+qt = ["PyQt5", "soso_qt_extras >= 1.1.0"]
 
 [project.urls]
 Home = "https://github.com/Zen-Master-SoSo/conn_jack"
